      Versions section) explaining that deprecated method names and options
      should continue to work unchanged for an extended and defined period of
      time, though not indefinitely.

    - Renamed several methods in the PDF::API2 base class:

      - end -> close
      - open_scalar -> from_string
      - stringify -> to_string
      - pages -> page_count

    - Merged saveas into save.

    - Added $page->boundaries() and $pdf->default_page_boundaries() to replace
      the separate methods for the various page boundaries.  The supported
      arguments are slightly different; some edge cases have been removed and
      new options have been added.  See below and the PDF::API2::Page
      documentation for details.

    - Added $page->size() and $pdf->default_page_size() as a shortcut for
      setting the media box.

    - Both $page->size() and $page->boundaries() (and their $pdf default
      equivalents) now accept "WxH" page sizes in inches (e.g. 11x17 or 8.5x11).
      This does not apply to the deprecated versions of these methods.

    - Both $page->size() and $page->boundaries() (and their $pdf default
      equivalents) now accept a single number for page boundaries other than the
      media box, representing an amount in points to shrink the next larger box.
      This does not apply to the deprecated versions of these methods.

    - Created a convenience method $pdf->font, which combines corefont, ttfont,
      psfont, and bdfont.  Unlike corefont, font requires the exact name of one
      of the standard fonts.  Kerning is on by default (vs. off by default in
      the type-specific methods).

    - Renamed synfont to synthetic_font.  Renamed and documented the options.
      The new hscale option (formerly -slant) now takes a percentage (100 = no
      change, vs. 1 = no change for -slant) to match the hscale method in
      Content.  The new "bold" option is in thousandths of a text unit,